; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Iter.c_Zip_Assign.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Iter.c_Zip_Assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Zip = type { i32, i32 }

@Zip = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Zip*, %struct.Zip*)* @Zip_Assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Zip_Assign(%struct.Zip* %0, %struct.Zip* %1) #0 {
  %3 = alloca %struct.Zip*, align 8
  %4 = alloca %struct.Zip*, align 8
  %5 = alloca %struct.Zip*, align 8
  %6 = alloca %struct.Zip*, align 8
  store %struct.Zip* %0, %struct.Zip** %3, align 8
  store %struct.Zip* %1, %struct.Zip** %4, align 8
  %7 = load %struct.Zip*, %struct.Zip** %3, align 8
  store %struct.Zip* %7, %struct.Zip** %5, align 8
  %8 = load %struct.Zip*, %struct.Zip** %4, align 8
  %9 = load i32, i32* @Zip, align 4
  %10 = call %struct.Zip* @cast(%struct.Zip* %8, i32 %9)
  store %struct.Zip* %10, %struct.Zip** %6, align 8
  %11 = load %struct.Zip*, %struct.Zip** %5, align 8
  %12 = getelementptr inbounds %struct.Zip, %struct.Zip* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.Zip*, %struct.Zip** %6, align 8
  %15 = getelementptr inbounds %struct.Zip, %struct.Zip* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @assign(i32 %13, i32 %16)
  %18 = load %struct.Zip*, %struct.Zip** %5, align 8
  %19 = getelementptr inbounds %struct.Zip, %struct.Zip* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.Zip*, %struct.Zip** %6, align 8
  %22 = getelementptr inbounds %struct.Zip, %struct.Zip* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @assign(i32 %20, i32 %23)
  ret void
}

declare dso_local %struct.Zip* @cast(%struct.Zip*, i32) #1

declare dso_local i32 @assign(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
